--- a/fotof/src/main/webapp/Booking.xhtml
+++ b/fotof/src/main/webapp/Booking.xhtml
@@ -1,6 +1,5 @@
 <!DOCTYPE HTML>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
 
@@ -9,7 +8,7 @@
         <!-- Start a new process instance. The Process Definition Key is read internally from
              request parameters and cached in the CDI conversation scope.
         -->
-        <f:event type="preRenderView" listener="#{camundaTaskForm.startTaskForm()}" />
+        <f:event type="preRenderView" listener="#{camundaTaskForm.startProcessInstanceByKeyForm()}"/>
     </f:metadata>
     <h:head>
         <title>Book photo session</title>
@@ -31,7 +30,8 @@
             <br/>
             Other comments: <br/> <input type="text" name="LastName" value=""/>
             <br/>
-            <h:commandButton id="submit_button" value="Boking" action="#{camundaTaskForm.completeTask()}" />
+            <h:commandButton id="submit_button" value="Boking"
+                             action="#{camundaTaskForm.completeProcessInstanceForm()}"/>
         </h:form>
     </h:body>
 </f:view>
