Booking.xhtml edit

--- a/fotof/src/main/webapp/Booking.xhtml
+++ b/fotof/src/main/webapp/Booking.xhtml
@@ -30,7 +30,12 @@
             <br/>
             Other comments: <br/> <input type="text" name="LastName" value=""/>
             <br/>
-            <h:commandButton id="submit_button" value="Boking"
+            <!--
+            <br/>
+            Shoot in studio: <h:selectBooleanCheckbox value="#{}"/>
+            <br/>
+            <br/> -->
+            <h:commandButton id="submit_button" value="Book"
                              action="#{camundaTaskForm.completeProcessInstanceForm()}"/>
         </h:form>
     </h:body>
