Added edit photo and automated tasks to system

--- a/fotof/src/main/webapp/Booking.xhtml
+++ b/fotof/src/main/webapp/Booking.xhtml
@@ -30,11 +30,10 @@
             <br/>
             Other comments: <br/> <input type="text" name="LastName" value=""/>
             <br/>
-            <!--
             <br/>
-            Shoot in studio: <h:selectBooleanCheckbox value="#{}"/>
+            Shoot in studio: <h:selectBooleanCheckbox value="true"/>
             <br/>
-            <br/> -->
+            <br/>
             <h:commandButton id="submit_button" value="Book"
                              action="#{camundaTaskForm.completeProcessInstanceForm()}"/>
         </h:form>
