Edit bpmn tasks to service and usertasks. Gateway performs check on form based on "inStudio" variable.

--- a/fotof/src/main/webapp/Booking.xhtml
+++ b/fotof/src/main/webapp/Booking.xhtml
@@ -31,7 +31,7 @@
             Other comments: <br/> <input type="text" name="LastName" value=""/>
             <br/>
             <br/>
-            Shoot in studio: <h:selectBooleanCheckbox value="true"/>
+            Shoot in studio: <h:selectBooleanCheckbox value="#{processVariables['inStudio']}"/>
             <br/>
             <br/>
             <h:commandButton id="submit_button" value="Book"
