--- a/fotof/src/main/webapp/EditPhoto.xhtml
+++ b/fotof/src/main/webapp/EditPhoto.xhtml
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml"
+<HTML lang="en" xmlns="http://www.w3.org/1999/xhtml"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core">
@@ -22,4 +22,4 @@
         </h:form>
     </h:body>
 </f:view>
-</html>
+</HTML>
